STTME-119 Fix bottom spacing for when next line is not on
Pull latest core

--- a/www/src/scss/_display-next-line.scss
+++ b/www/src/scss/_display-next-line.scss
@@ -12,6 +12,10 @@
 }
 
 .display-next-line {
+  .deck {
+    height: calc(100% - #{$viewer-padding} * 1);
+  }
+
   .slide {
     display: none;
     height: initial;
